Updated rhf1d and rhsphere Makefiles

--- a/rhf1d/Makefile
+++ b/rhf1d/Makefile
@@ -6,14 +6,11 @@
 #
 ##     --------------------------                      ----------RH-- ##
 
-GEOMETRY = ONE_D_PLANE
-
-include ../makefiles/makefile.$(CPU).$(OS)
-
+include ../Makefile.config
 
 ## --- If no FORTRAN compiler is available remove -lrh_f90 in following
 
-      LIBS = -lrh -lrh_f90 $(ARCHLIBS)
+      LIBS = -lrh -lrh_f90
 
 
 ## --- Define groups of object files --                -------------- ##
