--- a/rhsphere/Makefile
+++ b/rhsphere/Makefile
@@ -7,14 +7,12 @@
 ##     --------------------------                      ----------RH-- ##
 
 
-GEOMETRY = SPHERICAL_SYMMETRIC
-
-include ../makefiles/makefile.$(CPU).$(OS)
+include ../Makefile.config
 
 
 ## --- If no FORTRAN compiler is available remove -lrh_f90 in following
 
-    LIBS = -lrh -lrh_f90 $(ARCHLIBS)
+    LIBS = -lrh -lrh_f90
 
 
 ## --- Define groups of object files --                -------------- ##
