Added OS setting in Makefile.config and other minor fixes

--- a/Makefile.config
+++ b/Makefile.config
@@ -4,14 +4,6 @@
 #
 #   Edit the variables below to reflect your compilers and environment.
 #
-#   If you are compiling in Linux or Solaris it is recommended you set the
-#   environment variables CPU and OS to use the correct FPE handling routines:
-#
-#   $ export CPU=`uname -m`
-#   $ export OS=`uname -s`
-#
-#   For all other systems, this is not necessary.
-#
 # -----------------------------------------------------------------------
 
 CC       = mpicc
@@ -23,8 +15,12 @@ F90FLAGS = -O2
 LD       = mpicc
 LDFLAGS  =
 
-AR = ar
+AR       = ar
 ARFLAGS  = rs
 RANLIB   = ranlib
 
 HDF5_DIR = /usr/local
+
+# The OS variable should have the operative system name
+# If the command below is unavailable, please edit manually
+OS = $(shell uname -s)
