[DEV][TMP] Optimize Makefile.config for `Intel Parallel studio`

--- a/Makefile.config
+++ b/Makefile.config
@@ -6,20 +6,22 @@
 #
 # -----------------------------------------------------------------------
 
-CC       = mpicc
-CFLAGS   = -O2 -DHAVE_F90 -Wformat
+OPT = -O3 -ipo -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
 
-F90C     = gfortran
-F90FLAGS = -O2
+CC       = mpiicc
+CFLAGS   = ${OPT} -DHAVE_F90 -Wformat
 
-LD       = mpicc
+F90C     = mpiifort
+F90FLAGS = ${OPT}
+
+LD       = mpiicc
 LDFLAGS  =
 
 AR       = ar
 ARFLAGS  = rs
 RANLIB   = ranlib
 
-HDF5_DIR = /usr/local
+HDF5_DIR = /astro/local/hdf5/1.10.1/intel/
 
 # The OS variable should have the operative system name
 # If the command below is unavailable, please edit manually
