[DEV] Adds setup for Betzy

--- a/Makefile.config
+++ b/Makefile.config
@@ -6,22 +6,23 @@
 #
 # -----------------------------------------------------------------------
 
-OPT = -O3 -ipo -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
+OPT = -O3 -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
+#OPT = -O2 -g -traceback -ip -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
 
-CC       = mpiicc
+CC       = mpicc
 CFLAGS   = ${OPT} -DHAVE_F90 -Wformat
 
-F90C     = mpiifort
-F90FLAGS = ${OPT}
+F90C     = mpif90
+F90FLAGS = ${OPT} 
 
-LD       = mpiicc
-LDFLAGS  =
+LD       = mpif90
+LDFLAGS  = -nofor_main
 
 AR       = ar
 ARFLAGS  = rs
 RANLIB   = ranlib
 
-HDF5_DIR = /astro/local/hdf5/1.10.1/intel/
+#HDF5_DIR = /astro/local/hdf5/1.10.1/intel/
 
 # The OS variable should have the operative system name
 # If the command below is unavailable, please edit manually
