setting makefile etc., for GSK

--- a/Makefile.config
+++ b/Makefile.config
@@ -19,7 +19,7 @@ AR       = ar
 ARFLAGS  = rs
 RANLIB   = ranlib
 
-HDF5_DIR = /usr/local
+HDF5_DIR = /Users/gskerr1/00_Packages/hdf5-1.12.1-install-parallel
 
 # The OS variable should have the operative system name
 # If the command below is unavailable, please edit manually
