fixed makefile setting

--- a/Makefile.config
+++ b/Makefile.config
@@ -9,7 +9,7 @@
 CC       = mpicc
 CFLAGS   = -O2 -DHAVE_F90 -Wformat
 
-F90C     = gfortran
+F90C     = /Users/gskerr1/00_Packages/gcc-10.1.0/bin/gfortran-10.1
 F90FLAGS = -O2
 
 LD       = mpicc
