correct FIXED_POPS... added Cnt code

--- a/rh15d/Makefile
+++ b/rh15d/Makefile
@@ -51,8 +51,9 @@ SRC = accelerate_p.c  \
           reademistab.c \
           trapezoidal.c \
           readpopsin.c \
-          hdf5popsin.c
-
+          hdf5popsin.c \
+          hdf5cntin.c \
+          hdf5cntin_alt.c
 BIN_SRC = rh15d_ray.c rh15d_ray_pool.c rh15d_lteray.c
 OBJS = $(SRC:.c=.o)
 BIN_OBJ = $(BIN_SRC:.c=.o)
