ORG: Updates Makefile.config

--- a/Makefile.config
+++ b/Makefile.config
@@ -6,11 +6,10 @@
 #
 # -----------------------------------------------------------------------
 
-OPT = -O3 -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
-#OPT = -O2 -g -traceback -ip -qopt-prefetch -use-intel-optimized-headers -march=core-avx2 -fp-model source
+OPT = -O3 -march=core-avx2 
 
 CC       = mpicc
-CFLAGS   = ${OPT} -DHAVE_F90 -Wformat
+CFLAGS   = ${OPT} -I/usr/include/tirpc/
 
 F90C     = mpif90
 F90FLAGS = ${OPT} 
