[ORG] Adds missing LDFLAGS for ltirpc

--- a/Makefile.config
+++ b/Makefile.config
@@ -15,7 +15,7 @@ F90C     = mpif90
 F90FLAGS = ${OPT} 
 
 LD       = mpif90
-LDFLAGS  = -nofor_main
+LDFLAGS  = -nofor-main -ltirpc
 
 AR       = ar
 ARFLAGS  = rs
