[CONFIG] Update build configuration

--- a/Makefile.config
+++ b/Makefile.config
@@ -6,16 +6,46 @@
 #
 # -----------------------------------------------------------------------
 
-OPT = -O3 -march=core-avx2 
+OPT = -O3 
 
 CC       = mpicc
-CFLAGS   = ${OPT} -I/usr/include/tirpc/
-
 F90C     = mpif90
-F90FLAGS = ${OPT} 
-
 LD       = mpif90
-LDFLAGS  = -nofor-main -ltirpc
+
+# The OS variable should have the operative system name
+# If the command below is unavailable, please edit manually
+OPSYS = $(shell uname -s)
+OS = $(OPSYS)
+
+# Default flags for Linux
+CFLAGS   = ${OPT}
+F90FLAGS = ${OPT}
+LDFLAGS  = 
+
+# OS-specific flags
+ifeq ($(OPSYS),Darwin)
+  # macOS specific flags - use current macOS version instead of hardcoded 15.0
+  MACOS_VERSION := $(shell sw_vers -productVersion | cut -d. -f1)
+  CFLAGS   += -mmacosx-version-min=$(MACOS_VERSION).0
+  F90FLAGS += -mmacosx-version-min=$(MACOS_VERSION).0
+  LDFLAGS  += -mmacosx-version-min=$(MACOS_VERSION).0
+  # Architecture-specific optimization for macOS
+  ARCH := $(shell uname -m)
+  ifeq ($(ARCH),arm64)
+    # Apple Silicon optimization
+    CFLAGS   += -mcpu=apple-m1 -mtune=native
+    F90FLAGS += -mcpu=apple-m1 -mtune=native
+  else
+    # Intel Mac optimization
+    CFLAGS   += -mtune=native
+    F90FLAGS += -mtune=native
+  endif
+  # HDF5 via Homebrew (MPI version)
+  HDF5_PREFIX = $(shell brew --prefix hdf5-mpi 2>/dev/null || echo "/opt/homebrew/opt/hdf5-mpi")
+  CFLAGS   += -I$(HDF5_PREFIX)/include
+  F90FLAGS += -I$(HDF5_PREFIX)/include
+  LDFLAGS  += -L$(HDF5_PREFIX)/lib -lhdf5
+endif
 
 AR       = ar
 ARFLAGS  = rs
@@ -23,6 +53,3 @@ RANLIB   = ranlib
 
 #HDF5_DIR = /astro/local/hdf5/1.10.1/intel/
 
-# The OS variable should have the operative system name
-# If the command below is unavailable, please edit manually
-OS = $(shell uname -s)
