[FIX] Fixes Makefile.config for generic Linux system

--- a/Makefile.config
+++ b/Makefile.config
@@ -10,7 +10,7 @@ OPT = -O3
 
 CC       = mpicc
 F90C     = mpif90
-LD       = mpif90
+LD       = mpicc
 
 # The OS variable should have the operative system name
 # If the command below is unavailable, please edit manually
@@ -18,9 +18,9 @@ OPSYS = $(shell uname -s)
 OS = $(OPSYS)
 
 # Default flags for Linux
-CFLAGS   = ${OPT}
+CFLAGS   = ${OPT} -I/usr/include/tirpc/ 
 F90FLAGS = ${OPT}
-LDFLAGS  = 
+LDFLAGS  = -ltirpc
 
 # OS-specific flags
 ifeq ($(OPSYS),Darwin)
@@ -40,16 +40,16 @@ ifeq ($(OPSYS),Darwin)
     CFLAGS   += -mtune=native
     F90FLAGS += -mtune=native
   endif
-  # HDF5 via Homebrew (MPI version)
-  HDF5_PREFIX = $(shell brew --prefix hdf5-mpi 2>/dev/null || echo "/opt/homebrew/opt/hdf5-mpi")
-  CFLAGS   += -I$(HDF5_PREFIX)/include
-  F90FLAGS += -I$(HDF5_PREFIX)/include
-  LDFLAGS  += -L$(HDF5_PREFIX)/lib -lhdf5
+  # Find HDF5 installed via Homebrew (MPI version)
+  HDF5_DIR = $(shell brew --prefix hdf5-mpi 2>/dev/null || echo "/opt/homebrew/opt/hdf5-mpi")
 endif
+
+CFLAGS   += -I$(HDF5_DIR)/include
+F90FLAGS += -I$(HDF5_DIR)/include
+LDFLAGS  += -L$(HDF5_DIR)/lib -lhdf5
 
 AR       = ar
 ARFLAGS  = rs
 RANLIB   = ranlib
 
-#HDF5_DIR = /astro/local/hdf5/1.10.1/intel/
 
